# resume-go

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.claude/skills/improve-resume/: SKILL.md
.claude/skills/linkedin-profile-optimize/: SKILL.md
.claude/skills/linkedin-to-ats/: SKILL.md
.claude/skills/resume-ats-optimize/: SKILL.md
.claude/skills/tailor-resume/: SKILL.md
scripts/: linkedin_profile_lib.py  md_to_tex.py  normalize_linkedin_md.py  pdf_to_md.py  profile_to_linkedin_md.py
templates/: jake_resume.tex.j2
